Fixed spacing between header buttons

--- a/client/components/Header/Header.scss
+++ b/client/components/Header/Header.scss
@@ -24,6 +24,10 @@
     }
   }
 
+  .item {
+    margin-left: 10px;
+  }
+
   #nameItem {
     background-color: rgba(0, 0, 0, 0.7);
     padding-top: 22px!important;
